--- a/frontend/src/Styles/Homepage.module.css
+++ b/frontend/src/Styles/Homepage.module.css
@@ -67,3 +67,72 @@
     display: flex; 
     align-items: center;   
 }
+.mapsWrapper{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center
+}
+.mapsDetails > h1{
+    margin-top: 15%;
+    letter-spacing: 0.1ch;
+}
+.mapsDetails > p{
+    line-height: 1.5;
+    letter-spacing: 0.1ch;
+    font-size: 20px;
+}
+.mapsDetails > button{
+    padding: 1%;
+    border: none;
+    font-weight: 400;
+    border-radius: 10px;
+    background-color: rgb(201, 198, 198);
+    letter-spacing: 0.1ch;
+    font-size: 25px;
+}
+.mapsDetails > button:hover{
+    background-color: coral;
+}
+.mapsDetails > button:focus{
+    outline: none;
+}
+.mapsImg{
+    width: 50%;
+    border-radius: 10px;
+}
+.videoWrapper{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 1%;
+    justify-content: space-evenly
+}
+.videoDetails > h1{
+    margin-top: 15%;
+    letter-spacing: 0.1ch;
+}
+.videoDetails > p{
+    line-height: 1.5;
+    letter-spacing: 0.1ch;
+    font-size: 20px;
+}
+.videoDetails > button{
+    padding: 1%;
+    border: none;
+    font-weight: 400;
+    border-radius: 10px;
+    background-color: rgb(201, 198, 198);
+    letter-spacing: 0.1ch;
+    font-size: 25px;
+}
+.videoDetails > button:hover{
+    background-color: coral;
+}
+.videoDetails > button:focus{
+    outline: none;
+}
+.videoImg{
+    width: 44%;
+    border-radius: 10px;
+}
