--- a/frontend/src/Styles/Homepage.module.css
+++ b/frontend/src/Styles/Homepage.module.css
@@ -5,6 +5,8 @@
     padding: 1%;
     justify-content: space-evenly;
     align-items: center;
+
+    margin-top:10%;
 }
 .openingImg{
     border-radius: 10px;
