Heroku deployment starts

--- a/frontend/src/Styles/Navbar.module.css
+++ b/frontend/src/Styles/Navbar.module.css
@@ -14,7 +14,19 @@
     /* width: "100%", , ", , " */
 }
 
-
+.link{
+    /* text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: rgb(255, 255, 255);
+    font-weight: 500; */
+    cursor: pointer;
+  }
+  
+  .link:active{
+    background-color: rgba(17, 17, 17, 0.233);
+  }
 .navContainer__logo{
     margin-left: 20px;
 }
